fix overlapping cards

--- a/blocks/section/style.css
+++ b/blocks/section/style.css
@@ -1,151 +1,141 @@
-.promotion {
-    min-height: 312px;
+.promotion__area {
+
+	position: relative;
+}
+
+.promotion__bg {
+	position: absolute;
+	z-index: 3;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	height: 321px;
+	width: 100vw;
+	display: block;
+	z-index: -1;
+	left: 0;
+	top: 0;
+}
+
+.promotion__bg:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(0deg, rgba(255, 136, 51, 0.33), rgba(255, 136, 51, 0.33));
+}
+
+.professionnel .promotion__bg:after {
+	background: linear-gradient(0deg, rgba(23, 28, 96, 0.5), rgba(23, 28, 96, 0.5));
 }
 
 @media only screen and (max-width: 767px) {
-    .promotion {
-        min-height: 300px;
-    }
-}
-
-.promotion__area {
-    position: relative;
-    z-index: 3;
-    margin: 200px 0 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-	background-position: center;
-
-}
-
-.promotion__area:after {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: linear-gradient(0deg, rgba(255, 136, 51, 0.33), rgba(255, 136, 51, 0.33));
+	.promotion {
+		min-height: 300px;
 	}
-.professionnel .promotion__area:after {
-		background: linear-gradient(0deg, rgba(23, 28, 96, 0.5), rgba(23, 28, 96, 0.5));
-	}
+}
 
 @media only screen and (max-width: 991px) {
-    .promotion__area {
-        margin: 110px 0 180px;
-    }
+	.promotion__area {
+		margin: 110px 0 180px;
+	}
 }
 
-
 .promotion__area .container {
-    position: relative;
+	position: relative;
 }
 
 .promotion__head {
-    text-align: right;
-    position: absolute;
-    right: 0;
-    top: -120px;
+	text-align: right;
+	display: inline-block;
+	transform: translate(150%, -50px);
 }
 
 @media only screen and (max-width: 767px) {
-    .promotion__head {
-        right: 25px;
-        top: -95px;
-    }
+	.promotion__head {
+		transform: translate(0, -50px);
+		text-align: center;
+		margin: 0 auto;
+		display: block;
+	}
 }
 
 .promotion__head h3 {
-    -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    border-radius: 100px 0px 0px 100px;
-    background: #FFFFFF;
-    padding: 10px 30px;
-    font-weight: 800;
-    font-size: 2.5rem;
-    line-height: 3rem;
-    position: relative;
-    text-transform: uppercase;
+	-webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
+	box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
+	border-radius: 100px 0px 0px 100px;
+	background: #FFFFFF;
+	padding: 10px 30px;
+	font-weight: 800;
+	font-size: 2.5rem;
+	line-height: 3rem;
+	position: relative;
+	text-transform: uppercase;
 }
 
 @media only screen and (max-width: 767px) {
-    .promotion__head h3 {
-        font-size: 1.5625rem;
-        line-height: 2.375rem;
-        display: block;
-    }
-}
-
-.promotion__head h3::before {
-    content: "";
-    background: url(../img/angle-1.svg) no-repeat scroll 0 (0 / cover);
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    top: -17px;
-    right: -17px;
+	.promotion__head h3 {
+		font-size: 1.3rem;
+		line-height: 2.375rem;
+		display: block;
+		border-radius: 100px;
+	}
 }
 
 .promotion__head h2 {
-    -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    border-radius: 100px 0px 0px 100px;
-    background: #FFFFFF;
-    padding: 10px 30px;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: 3.75rem;
-    line-height: 4.5rem;
+	-webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
+	box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
+	border-radius: 100px 0px 0px 100px;
+	background: #FFFFFF;
+	padding: 10px 30px;
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 3.75rem;
+	line-height: 4.5rem;
 }
 
 @media only screen and (max-width: 767px) {
-    .promotion__head h2 {
-        font-size: 1.875rem;
-        line-height: 3.125rem;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    .promotion__head h2 {
-        font-size: 3.125rem;
-    }
+	.promotion__head h2 {
+		font-size: 1.5rem;
+		line-height: 3.125rem;
+		border-radius: 100px;
+	}
 }
 
 .promotion__bottom {
-    -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
-    border-radius: 16px;
-    background: #FFFFFF;
-    padding: 36px 40px;
-    max-width: 315px;
-    position: absolute;
-    bottom: -165px;
+	-webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
+	box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
+	border-radius: 16px;
+	background: #FFFFFF;
+	padding: 36px 40px;
+	max-width: 400px;
+	bottom: -165px;
 }
 
 .promotion__bottom h2 {
-    color: #0f3465;
-    font-weight: 700;
-    font-size: 1.375rem;
-    line-height: 1.875rem;
-    text-transform: uppercase;
-    margin: 0 0 30px;
+	color: #0f3465;
+	font-weight: 700;
+	font-size: 1.375rem;
+	line-height: 1.875rem;
+	text-transform: uppercase;
+	margin: 0 0 30px;
 }
 
 .promotion__bottom p {
-    font-family: "Raleway", sans-serif;
-    font-weight: 500;
-    font-size: 1rem;
-    line-height: 1.625rem;
-    color: #152235;
-    margin-bottom: 30px;
+	font-family: "Raleway", sans-serif;
+	font-weight: 500;
+	font-size: 1rem;
+	line-height: 1.625rem;
+	color: #152235;
+	margin-bottom: 30px;
 }
 
 .promotion__bottom .btn__white {
-    color: var(--blue);
+	color: var(--blue);
 }
 
 .promotion__bottom .btn__white:hover {
-    color: #fff;
+	color: #fff;
 }
